--- a/ST week 2.html
+++ b/ST week 2.html
@@ -9,12 +9,12 @@
 	<nav id="navbar">
 		<div class="container">
 			<ul>
-					<li><a href="1. index.html">Home</a></li>
-					<li><a href="5. Smart Start.html">Smart Start</a></li>
-					<li><a href="3. Smart Connection.html">Smart Connection</a></li>
-					<li><a href="2. Smart Business.html">Smart Business</a></li>
-					<li><a class="active" href="6. Smart Technologie.html">Smart Technology</a></li>
-					<li><a href="4. Smart Project.Html">Smart Project</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="Smart Start.html">Smart Start</a></li>
+					<li><a href="Smart Connection.html">Smart Connection</a></li>
+					<li><a href="Smart Business.html">Smart Business</a></li>
+					<li><a class="active" href="Smart Technologie.html">Smart Technology</a></li>
+					<li><a href="Smart Project.Html">Smart Project</a></li>
 			</ul>
 		</div>
 	</nav>
