--- a/Smart Start.html
+++ b/Smart Start.html
@@ -9,7 +9,7 @@
 	<nav id="navbar">
 		<div class="container">
 			<ul>
-					<li><a href="1. index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 				<li><a class="active" href="Smart Start.html">Smart Start</a></li>
 				<li><a href="Smart Connection.html">Smart Connection</a></li>
 				<li><a href="Smart Business.html">Smart Business</a></li>
