--- a/SB week 6.html
+++ b/SB week 6.html
@@ -26,7 +26,7 @@
 
 	<div class="container">
 		<section id="main">
-				<a href="2. Smart Business.html">Smart Business</a> > Week 6
+				<a href="Smart Business.html">Smart Business</a> > Week 6
 			<h1>Smart Business</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
