--- a/SS week 2.html
+++ b/SS week 2.html
@@ -26,7 +26,7 @@
 
 	<div class="container">
 		<section id="main">
-				<a href="5. Smart Start.html">Smart Start</a> > Week 2
+				<a href="Smart Start.html">Smart Start</a> > Week 2
 			<h1>Smart Start </h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
