--- a/SS week 4.html
+++ b/SS week 4.html
@@ -28,7 +28,7 @@
 
 	<div class="container">
 		<section id="main">
-			<a href="5. Smart Start.html">Smart Start</a> > Week 4
+			<a href="Smart Start.html">Smart Start</a> > Week 4
 			<h1>Smart Start</h1>
 			<p>
 In de laatste jaren zijn agile en lean werken steeds meer de primaire werkwijze van bedrijven aan het worden. De twee methodes zijn gemaakt doelgericht en met zo min mogelijk onnodige stappen te werken om op die manier optimaal klantwaarde te creëren. In dit stuk zal ik eerst wat uitleg geven wat agile en lean is en vervolgens zal ik aan de hand van een casus de relaties tussen smart industry, lean en agile zien.<br>
