--- a/SS week 5.html
+++ b/SS week 5.html
@@ -26,7 +26,7 @@
 
 	<div class="container">
 		<section id="main">
-				<a href="5. Smart Start.html">Smart Start</a> > Week 5
+				<a href="Smart Start.html">Smart Start</a> > Week 5
 				<h1>Smart Industry en het Platform Business Model</h1>
 				
 				<p>Sinds het internet is ontstaan is de wereld steeds dichter bij elkaar gekomen. Mensen zijn zich gaan verzamelen op fora waarin ze informatie kunnen delen met mensen van dezelfde gedachtes. Maar bedrijven springen ook steeds meer op dit zelfde fenomeen. Grote bedrijven zijn met platformen een nieuw business model begonnen. Het platform business model houd in dat een bedrijf een platform creëert waarin consumenten bijvoorbeeld diensten aan elkaar kunnen aanbieden of met elkaar in communicatie kunnen komen. Maar vaak zit er meer achter dan de gebruiker denkt, zo gebruikt facebook bijvoorbeeld zijn platform om adverteerders in contact te brengen met gebruiker. Essentieel voor het platform business model is data.(Srnicek, 2017)</p>
