--- a/ST week 5.html
+++ b/ST week 5.html
@@ -26,7 +26,7 @@
 
 	<div class="container">
 		<section id="main">
-				<a href="6. Smart Technologie.html">Smart Technologie</a> > Week 5
+				<a href="Smart Technologie.html">Smart Technologie</a> > Week 5
 			<h1>Smart Technologie </h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
