--- a/SC week 5.html
+++ b/SC week 5.html
@@ -26,7 +26,7 @@
 
 	<div class="container">
 			<section id="main">
-					<a href="3. Smart Connection.html">Smart Connection</a> > Week 5
+					<a href="Smart Connection.html">Smart Connection</a> > Week 5
 				<h1>Smart Technologie </h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
