--- a/Smart Business.html
+++ b/Smart Business.html
@@ -32,15 +32,15 @@
 	</div>
 		<div class="container3">
 		<div class="btn-group">
-		<a href="2. SB week 1.html" button class="button">Week 1</button></a>
-		<a href="2. SB week 2.html" button class="button">Week 2</button></a>
-		<a href="2. SB week 3.html" button class="button">Week 3</button></a>
+		<a href="SB week 1.html" button class="button">Week 1</button></a>
+		<a href="SB week 2.html" button class="button">Week 2</button></a>
+		<a href="SB week 3.html" button class="button">Week 3</button></a>
 			</div>
 	<br>
 	<div class="btn-group">
-			<a href="2. SB week 4.html" button class="button">Week 4</button></a>
-			<a href="2. SB week 5.html" button class="button">Week 5</button></a>
-			<a href="2. SB week 6.html" button class="button">Week 6</button></a>
+			<a href="SB week 4.html" button class="button">Week 4</button></a>
+			<a href="SB week 5.html" button class="button">Week 5</button></a>
+			<a href="SB week 6.html" button class="button">Week 6</button></a>
 	</div>
 </div>
 
