--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 	<nav id="navbar">
 		<div class="container">
 			<ul>
-					<li><a class="active" href="index.html">Home</a></li>
-					<li><a href="Smart Start.html">Smart Start</a></li>
-					<li><a href="Smart Connection.html">Smart Connection</a></li>
-					<li><a href="Smart Business.html">Smart Business</a></li>
-					<li><a href="Smart Technologie.html">Smart Technology</a></li>
-					<li><a href="Smart Project.Html">Smart Project</a></li>
+				<li><a class="active" href="index.html">Home</a></li>
+				<li><a href="Smart Start.html">Smart Start</a></li>
+				<li><a href="Smart Connection.html">Smart Connection</a></li>
+				<li><a href="Smart Business.html">Smart Business</a></li>
+				<li><a href="Smart Technologie.html">Smart Technology</a></li>
+				<li><a href="Smart Project.Html">Smart Project</a></li>
+				<li><a href="Competenties.html">Competenties</a></li>
 			</ul>
 		</div>
 	</nav>
