--- a/SC week 2.html
+++ b/SC week 2.html
@@ -9,12 +9,13 @@
 	<nav id="navbar">
 		<div class="container">
 			<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="Smart Start.html">Smart Start</a></li>
-					<li><a class="active"href="Smart Connection.html">Smart Connection</a></li>
-					<li><a  href="Smart Business.html">Smart Business</a></li>
-					<li><a href="Smart Technologie.html">Smart Technology</a></li>
-					<li><a href="Smart Project.Html">Smart Project</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="Smart Start.html">Smart Start</a></li>
+				<li><a class="active"href="Smart Connection.html">Smart Connection</a></li>
+				<li><a  href="Smart Business.html">Smart Business</a></li>
+				<li><a href="Smart Technologie.html">Smart Technology</a></li>
+				<li><a href="Smart Project.Html">Smart Project</a></li>
+				<li><a href="Competenties.html">Competenties</a></li>
 			</ul>
 		</div>
 	</nav>
