--- a/SC week 1.html
+++ b/SC week 1.html
@@ -15,7 +15,7 @@
 					<li><a  href="Smart Business.html">Smart Business</a></li>
 					<li><a href="Smart Technologie.html">Smart Technology</a></li>
 					<li><a href="Smart Project.Html">Smart Project</a></li>
-					<li><a href="Competenties.html">Competenties</a></li>
+					<li><a href="competenties.html">Competenties</a></li>
 			</ul>
 		</div>
 	</nav>
