--- a/index.html
+++ b/index.html
@@ -29,13 +29,12 @@
 
 	<div class="container">
 		<section id="main">
-			<h1>Eerst even voorstellen</h1>
-			<p>Hallo ik ben Thijs van Leerdam ik woon in Utrecht en ben bezig met de laatste jaar van mijn bachlor Food & Business bij de HAN. Naast studeren kijk ik graag series en ben ik vaak te vinden op festivals.</p>
-			<h1>Waarom Smart Industry</h1>
-			<p>Binnenshuis kan je tegenwoordig alles smart maken. Slimme lampen, slimme radiator knoppen, slimme tv’s en zelfs slimme koelkasten. Maar tijdens mijn stage ben ik bij verschillende midden tot klein bedrijven geweest en zag ik dat er nog weinig gedaan werd aan slimme innovaties om processen en taken te automatiseren. Hierdoor kunnen er nog vaak dingen misgaan omdat verschillende werknemers taken op verschillende manieren uitvoeren. Ik wil later zelf bij kleinere bedrijven komen te werken en naast de vaardigheden en competenties van mijn bachelor zie ik de kennis die ik mee krijg vanuit smart industry als een zeer sterke toevoeging om er voor te zorgen dat taken efficiënt worden uitgevoerd. Daarnaast vind ik nieuwe technieken erg interessant en wil ik er graag meer over te weten komen hoe ze werken en waar het goed voor is. Want in dit tijdperk van technologische ontwikkelingen worden ook niet altijd de juiste toepassingen gevonden voor techniek.</p>
+			<h1>Competenties</h1>
+			<p></p>
+			
 		</section>
 		<aside id="sidebar">
-			<p>Op deze website gaat u zien wat ik in de afgelopen periode heb gedaan voor de minor Smart Industry. Met de menubalk boven in neem ik u per onderdeel mee door de bewijzen</p>
+			<p>Hiernaast zie je per competentie mijn bewijs.</p>
 		</aside>
 	</div>
 
