--- a/SS week 2.html
+++ b/SS week 2.html
@@ -29,12 +29,20 @@
 		<section id="main">
 				<a href="Smart Start.html">Smart Start</a> > Week 2
 			<h1>Smart Start </h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>
+				<p>ATAG is een producent van keuken apparatuur met een zeer uitgebreid assortiment. Sinds 1943 maken ze al producten van hoge kwaliteit vandaar dat ze ook op veel producten 6 jaar garantie leveren. Daarnaast bieden ze ook een optie aan om gratis een gekocht gasfornuis te verwisselen met een inductieplaat als je huis binnen 10 jaar van het gasnetwerk wordt afgehaald.</p>
+				<p>Ook kan je bij ATAG ook terecht voor stijlvolle designs voor in de keuken met de MAGMA en MATRIX lijnen. Voor iedere thuis kok is er een geschikte combinatie van producten bij ATAG te krijgen.</p>
+				<p>Jan van Os heeft een lange loopbaan bij ATAG. Hij is in 1998 begonnen als product engineer en groeide door tot projectmanager. Tegenwoordig is innovatie manager en werkt hij al weer meer dan 13 jaar voor ATAG. Kortom Jan van Os is een man met veel kennis van de markt en hij weet precies hoe het bedrijf werk en waar de krachten zijn, maar ook waar nog ontwikkelingen in gedaan kunnen worden.</p>
+				<p>Zoals al is eerder beschreven heeft ATAG een service waarbij het gasfornuis binnen tien jaar na de aankoop het huis van het gasnetwerk wordt gehaald de koper gratis een nieuwe inductiekookplaat.
+				<img src='../fotos/ATAG.png' alt="ATAG">
+				(ATAG, 2019)</p>
+				<p>Deze Kookgarantie dat ATAG het noemt is bedoeld om mensen de zekerheid te geven dat ze kunnen genieten van hun aankoop bij ATAG.
+				Om de service goed te laten verlopen kan Smart technologie worden ingezet. De klanten die in aanmerking komen voor de kookgarantie kunnen doormiddel van een database worden gewaarschuwd wanneer hun huis van het gasnetwerk af moet. De database die moet worden opgezet zal in samenwerking moeten gaan met energieaanbieders om er voor te zorgen dat de geschrikte data binnenkomt over plannen om gebieden van het gasnetwerk te halen. Nieuwe en bestaande klanten die in aanmerkingen komen voor de kookgarantie kunnen hun contactgegeven doorgeven. Zodra er door een geautomatiseerd systeem wordt gezien dat er in het gebied waar de klant woont de huizen van het gasnetwerk worden gehaald krijgen ze een bericht met daarin een herinnering over de kookgarantie en informatie om het proces in gang te zetten. Daarnaast is er bij dit bericht ook mogelijkheden om nieuwe producten te tonen om te proberen op een nieuwe aankoop.</p>
+				<p>ATAG. (2019, Juli). In ATAG brochure juli 2019. Geraadpleegd op 16 september 2019, van: 
+					<a href= "https://www.atag.nl//medias/ATAG-brochure-juli-2019.pdf?context=bWFzdGVyfHJvb3R8MzQ0NDM1ODZ8YXBwbGljYXRpb24vcGRmfGhmYy9oN2QvODk2MTIxMzk1NjEyNi5wZGZ8MmJiZmMzNDJkN2Q1YjliYzI0Y2UyZmU2OTRkYWQ4MGYxYmE3MDc3NjI1M2Q0YTk1NTk2Yzk5YjFiMGVkYzY0Zg">https://www.atag.nl//medias/ATAG-brochure-juli-2019.pdf?context=bWFzdGVyfHJvb3R8MzQ0NDM1ODZ8YXBwbGljYXRpb24vcGRmfGhmYy9oN2QvODk2MTIxMzk1NjEyNi5wZGZ8MmJiZmMzNDJkN2Q1YjliYzI0Y2UyZmU2OTRkYWQ4MGYxYmE3MDc3NjI1M2Q0YTk1NTk2Yzk5YjFiMGVkYzY0Zg</a href>
+					</p>
+				
+				</p>
 		</section>
 		<aside id="sidebar">
 			<p>Smart Start Week 2 </p>
