--- a/SS week 3.html
+++ b/SS week 3.html
@@ -29,12 +29,13 @@
 		<section id="main">
 				<a href="Smart Start.html">Smart Start</a> > Week 3
 				<h1>Smart Start</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>
+					<p><b>Voorbereiding Smart Start week 3</b></p>
+						<p>Sustainable business proposition design is een goede manier om er achter te komen hoe je het beste waarde kunt creëren met je service of product voor belanghebbende zoals de consumenten, toeleveranciers en de maatschappij. Wanneer het model goed wordt gebruikt krijg je informatie uit verschillende groepen over de verwachtingen die ze hebben voor het product of service. Met de verzamelde data kun je meerder creatieve oplossingen bedenken die vervolgens uitvoerende getest moeten worden. Met de Sustainable business proposition design methode ontstaat er een goed dialoog waarbij met klanten consumenten en andere belanghebbende waardoor de waarde die toegevoegd worden ook daadwerkelijk duurzaam zijn.</p>
+						<p><b>Conclusie</b></p>
+						<p>Duurzame bedrijfsactiviteiten op te zetten is de communicatie tussen het bedrijf en de belanghebbende zoals de consumenten, toeleveranciers en opdrachtgevers van grootbelang. Hierbij zijn drie woorden een goede op knopping van Sustainable business proposition design: talking, thinking en testing.</p>
+						</p>
+				</p>
 			</section>
 			<aside id="sidebar">
 				<p>Smart Start Week 3 </p>
