--- a/SS week 4.html
+++ b/SS week 4.html
@@ -31,7 +31,15 @@
 		<section id="main">
 			<a href="Smart Start.html">Smart Start</a> > Week 4
 			<h1>Smart Start</h1>
+			<p><b>Voorbereiding Smart Start week 4</b></p>
 			<p>
+				<p>Het PDCA model is wat er bij mij op de studie vooral werd gebruikt bij het verbeteren van beleid en strategieën. Plan do check act is erg goed om een geheel proces in gang te zetten. De bedoeling is om eerst een plan uit te voeren en vervolgens te checken met andere modelen zoals de balanced scorecard.</p>
+				<p>De PDCA model is een erg bekende model maar niet het enigste vergelijkbare model. Zo heb je ook het RADAR model en Six Sigma. Natuurlijk ligt het per organisatie aan welk model het beste te gebruiken is daarnaast is er ook een combinatie van meerdere modelen mogelijk.(Sokovic z.d.)</p>
+				
+				<p>Sokovic. M. (2010) Quality Improvement Methodologies – PDCA Cycle, RADAR Matrix, DMAIC and DFSS. Geraadpleegd op 24 september 2019, van <a href=http://pdfs.semanticscholar.org/e348/8a24ab1197670544b4e08dc6173f396eada9.pdf>http://pdfs.semanticscholar.org/e348/8a24ab1197670544b4e08dc6173f396eada9.pdf</a></p>
+				</p>
+			<p>
+				<p><b>Weekopdracht Smart Start week 4</b></p>
 In de laatste jaren zijn agile en lean werken steeds meer de primaire werkwijze van bedrijven aan het worden. De twee methodes zijn gemaakt doelgericht en met zo min mogelijk onnodige stappen te werken om op die manier optimaal klantwaarde te creëren. In dit stuk zal ik eerst wat uitleg geven wat agile en lean is en vervolgens zal ik aan de hand van een casus de relaties tussen smart industry, lean en agile zien.<br>
 <br>
 <strong>Wat is Agile</strong> <br>
