--- a/SS week 1.html
+++ b/SS week 1.html
@@ -30,7 +30,7 @@
 				<a href="Smart Start.html">Smart Start</a> > Week 1
 				<h1>Smart Start</h1>
 				<p>
-					<p><b>•	Doe nader literatuuronderzoek naar de Smart Industry thema's die je hebt besproken
+					<p><b>Doe nader literatuuronderzoek naar de Smart Industry thema's die je hebt besproken
 					</b><br>
 					Open source onderzoek is een manier voor onderzoekers om hun resultaten te delen met het publiek zonder dat hier door de lezer geld betaald voor moet worden, daarnaast helpen de lezers met de ‘peerreviews’ van de onderzoeken. Daarnaast geeft het andere onderzoekers gemakkelijker te kans om de gevonden data uit andere onderzoeken te gebruiken voor verdere onderzoeken.</p>
 					<p>Even the greatest innovators stand on the shoulders of giants. All new creations are built on previous creations and provide inspiration for future ones. The ability to freely use and refine those previous creations increases the possibilities for future creativity. Lawrence Lessig calls this an "innovation commons," and cites its existence as one of the major reasons why the Internet as a whole developed so rapidly and innovatively. (Lawrence Lessig (2001)
@@ -38,9 +38,9 @@
 					Most importantly, the practice of Open Source has proved that these principles are a sound basis for the development of high-end content that can compete with the products produced by commodity-oriented control structures. (opensource. Z.d.)
 					https://www.firstmonday.org/ojs/index.php/fm/article/view/961/882
 					https://opensource.org/licenses</p>
-					<p><b>•	Bereid een kort verhaal voor over de relatie tussen dit thema en jouw studie</b><br>
+					<p><b>Bereid een kort verhaal voor over de relatie tussen dit thema en jouw studie</b><br>
 					Ik doe Food & Business. In de wereld van food wordt veel disinformatie geleverd als het gaat om bepaalde producten zeker met de opkomst van blogs en andere internetbronnen kan iedereen dingen claimen over een product die vaak niet onderzocht zijn en dus nergens op gebaseerd is. Maar producenten doen hier ook maar al te graag aan mee. Bij producenten zijn de claims die gemaakt worden wel aan wetten vast gelegd maar dit wil niet altijd zeggen dat ze ook echt correct zijn. met het gebruik van open source research kan de consument beter geïnformeerd worden  over bepaalde claims en uitdingen die worden gemaakt. De consument die echt wil weten wat de waarheid is kan dan zonder al te veel moeite en betalingen er achter komen wat de wetenschap er over te zeggen heeft en op basis van de gekregen informatie kan de consument een verstandige keuze maken.</p>
-					<p><b>•	Schrijf een blog of vertel in een vlog over de conclusies van je onderzoek</b><br>
+					<p><b>Schrijf een blog of vertel in een vlog over de conclusies van je onderzoek</b><br>
 					Iedereen weet het wel, spinazie is een goede bron van ijzer. Het wordt vaak gezegd en de cartoon Popeye bevestigd het hij is namelijk oer sterk na het eten van een blik spinazie. Het collectieve geheugen zegt dat dit door de hoge hoeveelheid ijzer komt maar dit blijkt helemaal niet te kloppen, de schrijver van de cartoon heeft in een van de eerste strips uitgelegd dat Popeye zijn super krachten krijgt van de grote hoeveelheid vitamine A in spinazie. Maar waarom denken we dan allemaal dat er in spinazie zo veel ijzer zit?
 					De mythe is ontstaan door een onderzoek uit 1907 genaamd ‘iron in food and its functions in nutrition’ waarin werd gerapporteerd dat spinazie veel ijzer heeft maar dit bleek fout te zijn doordat er contaminaties waren bij de geteste spinazie. Dit word vermeld in het onderzoek maar omdat er na dit onderzoek vele andere onderzoeken zijn geweest die niet de volledige data gebruikte voor hun eigen onderzoek is deze mythe ontstaan.
 					Het probleem zit het hier in de toegankelijkheid van de data die gebruikt zijn bij een onderzoeken. Als er restricties voor andere onderzoekers zijn voor het verkrijgen van de data die is gebruikt ontstaan er situaties waarin er als algemeen geaccepteerde valsheden als de waarheid worden gezien kan dit ook bij wetenschappers gebeuren waardoor zij verder gaan bouwen op incorrecte informatie.</p>
