--- a/Smart Connection.html
+++ b/Smart Connection.html
@@ -29,21 +29,25 @@
 		<div class="container2">
 	
 		<h2>Smart Connection</h2>
-		<p>Via de knoppen die hieronder kun je per week zien wat ik heb gedaan voor Smart Connection </p>
+		<p>
+			<p><b>HTML</b></p>
+			<p>Het portfolio dat moet worden gepresenteerd en wat u nu aan het bekijken bent is zichtbaat op internet. Om dit voor elkaar te krijgen hebben we tijdens de lessen van Smart connectie gewerkt met verschillende opdrachten om HTML te leren kennen.</p>
+			<p>De eerste website ging aan de hand van een tutorial op YouTube waaruit je een hele basale website krijgt. Ik heb deze opdracht gebruikt om verder te bouwen aan het portfolio wat u nu voor u heeft. Kort om ik heb doormiddel van de tutorial een framework opgezet waarna ik met verder onderzoek op YouTube en W3schools ben gaan doen om tot op dit punt te komen.</p>
+			<img src='../fotos/HTML.png' alt="Voorbeeld van HTML">
+			<p><b>CSS</b></p>
+			<p>Een website met alleen maar HTML was in de jaren negentig van de vorige eeuw nog geschrikt om informatie over te brengen, maar tegenwoordig voldoet dit niet meer aan de eisen van de gebruikers. Dat wil zeggen dat mensen tegenwoordig meer op het visuele afgaan bij het gebruik van een website. Hiervoor heb ik op deze site dan ook CSS gebruikt voor de opmaak. Delen van de het CSS bestand heb ik zelf geschreven maar ik heb ook gebruik gemaakt van bepaalde Templates die ik op internet heb gevonden.</p>
+			<img src='../fotos/CSS.png' alt="Voorbeeld van CSS">
+			<p><b>Machine learning</b></p>
+			<p>Verder heb ik tijdens het project wat ik heb gedaan veel gewerkt met Linux en dan specifiek Ubuntu. Tijdens het project zijn we bezig geweest met machine learning om onkruid te herkennen bij de teelt van blauwebessen.</p>
+			<p>De machinelearing ging via Tensorflow. Tensorflow is een open-source machinelearing tool van Google die gebruikt kan worden voor productie en onderzoek. Met Tensorflow kan je als beginner maar ook als expert API’s krijgen waarmee machineleanring mogelijk wordt gemaakt.</p>
+			<p>Tensorflow maakt gebruik van Python en hierdoor heb ik ook veel ervaring kunnen opbouwen hiermee. Helaas is het niet helemaal gelukt maar daar zal ik verder nog op ingaan bij het Project.
+			De volgende code heb ik gebruikt tijdens een test run voor tensorflow</p>
+			
+			<p><b>“python train.py --train_dir=/tensorflow/models/research/object_detection/training --pipeline_config_path=ssd_mobilenet_v1_pets.config”</b></p>
+<img src='../fotos/tensor2.png' alt="Concept Tensorflow"
+			</p>
 	</div>
-		<div class="container3">
-		<div class="btn-group">
-		<a href="SC week 1.html" button class="button">Week 1</button></a>
-		<a href="SC week 2.html" button class="button">Week 2</button></a>
-		<a href="SC week 3.html" button class="button">Week 3</button></a>
-			</div>
-	<br>
-	<div class="btn-group">
-			<a href="SC week 4.html" button class="button">Week 4</button></a>
-			<a href="SC week 5.html" button class="button">Week 5</button></a>
-			<a href="SC week 6.html" button class="button">Week 6</button></a>
-	</div>
-</div>
+		
 
 <footer id="main-footer">
 	<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/" style="color: blue">Creative Commons Attribution 4.0 International License</a>.</p>
