--- a/Smart Connection.html
+++ b/Smart Connection.html
@@ -33,7 +33,7 @@
 			<p><b>HTML</b></p>
 			<p>Het portfolio dat moet worden gepresenteerd en wat u nu aan het bekijken bent is zichtbaat op internet. Om dit voor elkaar te krijgen hebben we tijdens de lessen van Smart connectie gewerkt met verschillende opdrachten om HTML te leren kennen.</p>
 			<p>De eerste website ging aan de hand van een tutorial op YouTube waaruit je een hele basale website krijgt. Ik heb deze opdracht gebruikt om verder te bouwen aan het portfolio wat u nu voor u heeft. Kort om ik heb doormiddel van de tutorial een framework opgezet waarna ik met verder onderzoek op YouTube en W3schools ben gaan doen om tot op dit punt te komen.</p>
-			<img src='../fotos/HTML.png' alt="Voorbeeld van HTML">
+			<url('../fotos/HTML.png') alt="Voorbeeld van HTML">
 			<p><b>CSS</b></p>
 			<p>Een website met alleen maar HTML was in de jaren negentig van de vorige eeuw nog geschrikt om informatie over te brengen, maar tegenwoordig voldoet dit niet meer aan de eisen van de gebruikers. Dat wil zeggen dat mensen tegenwoordig meer op het visuele afgaan bij het gebruik van een website. Hiervoor heb ik op deze site dan ook CSS gebruikt voor de opmaak. Delen van de het CSS bestand heb ik zelf geschreven maar ik heb ook gebruik gemaakt van bepaalde Templates die ik op internet heb gevonden.</p>
 			<img src='../fotos/CSS.png' alt="Voorbeeld van CSS">
