--- a/Smart Connection.html
+++ b/Smart Connection.html
@@ -41,7 +41,7 @@
 			<p>Verder heb ik tijdens het project wat ik heb gedaan veel gewerkt met Linux en dan specifiek Ubuntu. Tijdens het project zijn we bezig geweest met machine learning om onkruid te herkennen bij de teelt van blauwebessen.</p>
 			<p>De machinelearing ging via Tensorflow. Tensorflow is een open-source machinelearing tool van Google die gebruikt kan worden voor productie en onderzoek. Met Tensorflow kan je als beginner maar ook als expert API’s krijgen waarmee machineleanring mogelijk wordt gemaakt.</p>
 			<p>Tensorflow maakt gebruik van Python en hierdoor heb ik ook veel ervaring kunnen opbouwen hiermee. Helaas is het niet helemaal gelukt maar daar zal ik verder nog op ingaan bij het Project.
-			De volgende code heb ik gebruikt tijdens een test run voor tensorflow</p>
+			De volgende code heb ik gebruikt tijdens een test run voor tensorflow:</p>
 			
 			<p><b>“python train.py --train_dir=/tensorflow/models/research/object_detection/training --pipeline_config_path=ssd_mobilenet_v1_pets.config”</b></p>
 <img src='https://imgur.com/gTDFkOX' alt="Concept Tensorflow"
