--- a/SB week 2.html
+++ b/SB week 2.html
@@ -29,12 +29,15 @@
 		<section id="main">
 				<a href="Smart Business.html">Smart Business</a> > Week 2
 			<h1>Smart Business </h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p><b>BeInformed</b></p>
+<p>Geert Rensen van BeInformed heeft in week 2 een gast college gegeven over het BMC, Design Thinking, veranderplan en businesscase.</p>
+<p>Tijdens de oefening die Geert aanbood tijdens het gast college keken we naar een auto verzekeraar in India. Geert wou een betere manier waarop mensen in India hun declaraties deed en meer klanten binnen halen voor de auto verzekering. Hiervoor moesten we een BMC van maken.</p>
+<img src='https://imgur.com/xGba7Cq' alt="BMC">
+<p>Aan de hand van het BMC moesten we een idee bedenken waarbij het gemakkelijk wordt gemaakt om fraude tegen te gaan bij declaraties. Wat er veel gebeurde in India was dat er door bevriende garages reparaties werden uitgevoerd die niet nodig waren waardoor er door de verzekeraar te veel moest worden uitgekeerd.</p>
+<p>Het idee waar wij mee waren gekomen was een App die de verzekerde moet instaleren op zijn of haar telefoon waarmee ze alle zaken rond de verzekering kunnen regelen. Zo kan de verzekeraar zien waar in de buurt een aangesloten garage is, declaraties invoeren en een paniek knop wanneer er dringend hulp nodig is.</p>
+<p>Maar voor de verzekeraar is de app ook uiterst handig omdat er veel data mee verzameld kan worden waarmee fraude kan worden achterhaald maar ook de service verbeterd kan worden.</p>
+<img src='https://imgur.com/ivBJfvb' alt="App">
+
 		</section>
 		<aside id="sidebar">
 			<p>Smart Business Week 2 </p>
