--- a/SB week 4.html
+++ b/SB week 4.html
@@ -29,12 +29,21 @@
 		<section id="main">
 				<a href="Smart Business.html">Smart Business</a> > Week 4
 			<h1>Smart Business </h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>
+				<p><b>Weekopdracht Smart Business week 4</b></p>
+				<p>Lean processen hebben als kern idee om customer value op het hoogste niveau  te krijgen met zo min mogelijk verspilling en afval. Al de 5 hieronder benoemde parameters gaan over het management van de onderwerpen. Wanneer deze 5 parameters optimaal werken is het doel van Lean bereikt.</p>
+				<p><b>Flow</b></p>
+				<p>Flow betekend het management van de productie. Door nieuwe technologieën kunnen grondstoffen gemakkelijker en efficiënter door de fabriek worden omgezet naar het eindproduct, niet alleen heeft flow management een belangrijke rol in de fabriek het gaat hier ook om de flow buiten de fabriek. Wanneer het Flow management optimaal is zijn producten sneller klaar en liggen grondstoffen of half fabricaten minder lang in opslag. De totale opbrengst van goed flow management is een snellere doorlooptijd van grondstoffen en half fabricaten en snellere levertijd voor klanten.</p>
+				<p><b>Customer</b></p>
+				<p>Welke klanten zijn goed voor de omzet en welke niet. Bij deze parameter is dat van een groot belang, soms zijn er klanten die niets opleveren maar wel veel van je tijd vragen maar soms heb je ook klanten die veel opleveren en maar weinig van je tijd vragen. De laatste wil je natuurlijk hebben en zijn door lean te verkrijgen door vroegtijdig met de klanten in gesprek te gaan over belangrijke stappen in het proces zodat er zo veel mogelijk fouten en tussen stappen weg gehaald kunnen worden. Door op deze manier te handelen wordt er een optimaal proces opgesteld waardoor de kosten omlaag gaan en de klant tevredenheid omhoog gaat. Een keyword bij deze parameter is ‘open relationship’ zodat de klant op de beste manier bedient kan worden.</p>
+				<p><b>Process</b></p>
+				<p>Maar een klein door van het proces levert daadwerkelijk geld op. Uiteindelijk is het doel bij Lean om alleen de stappen in het proces over te houden die geld op leveren. De andere stappen moeten uit het proces worden gehaald hoe ver dat mogelijk is. Op deze manier heb je een proces die optimaal werkt en met zo min mogelijk verliezen van efficiëntie, geld en tijd.</p>
+				<p><b>Supplier</b></p>
+				<p>Bij lean is het de bedoeling om een goede relatie te hebben bij 1 of een klein aantal suppliers. Op deze manier weet jij en de supplieer wat er nodig is voor de productie en hierdoor heb je minder voorraad waardoor er minder opslag nodig is en minder kapitaal vast zit in voorraden. Daarnaast kan je bij langere relaties betere prijzen afspreken omdat er groter wordt ingekocht.</p>
+				<p><b>Workforce</b></p>
+				<p>Het ontwikkelen van je personeel zorgt voor betere efficiëntie en lagere kosten door mindere doorloop van je personeel. Het draait om een relatie opbouwen met personeel zodat ze langer blijven en er minder moeite gedaan moet worden om nieuwe mensen te verwerven.</p>
+				
+				</p>
 		</section>
 		<aside id="sidebar">
 			<p>Smart Business Week 4 </p>
