--- a/Smart Business.html
+++ b/Smart Business.html
@@ -39,8 +39,8 @@
 			</div>
 	<br>
 	<div class="btn-group">
-			<a href="SB week 5.html" button class="button">Week 5</button></a>
-			<a href="SB week 6.html" button class="button">Week 6</button></a>
+			<a href="SB week 5.html" button class="button">Week 6</button></a>
+			<a href="SB week 6.html" button class="button">Ervaring</button></a>
 	</div>
 </div>
 
