--- a/SB week 5.html
+++ b/SB week 5.html
@@ -30,7 +30,11 @@
 				<a href="Smart Business.html">Smart Business</a> > Week 6
 			<h1>Smart Business</h1>
 			<p>
-				
+					<p><b>Target Operating model(TOM)</b></p>
+						<p>Vrijdag 15 november hebben we een presentatie gekregen van Paul Kalis. De presentatie ging over TOM. En geeft inzicht op effecten van innovaties in de gehele operatie. Paul is zelf COO van het bedrijf waar hij bij werkt en houd zich vooral bezig met de dagelijkse operaties. Hierin is het natuurlijk van groot belang dat de dagelijkse taken mee gaan met het langer termijn beleid van de organisatie. Alleen het probleem wat hier bijkomt is dat door innovatie vaak andere processen in de keten niet meer nodig zijn of op een andere manier moeten worden ingericht. Met TOM maak je met verschillende analyses een totaal overzicht van iedere stap in de keten van je organisatie.</p>
+						<p>Ook wij moesten dit doen in onze project organisatie. Hieronder zie je een beknopte TOM uitgewerkt voor blauwe bessen telers.</p>
+						</p>
+				<img src= https://i.imgur.com/6qG5HHx.jpg alt="TOM" width="60%">
 			</p>
 		</section>
 		<aside id="sidebar">
