--- a/Smart Technologie.html
+++ b/Smart Technologie.html
@@ -29,20 +29,14 @@
 		<div class="container2">
 	
 		<h2>Smart Technologie</h2>
-		<p>Via de knoppen die hieronder kun je per week zien wat ik heb gedaan voor Smart Technologie </p>
+		<p>Hieronder zie je per onderdeel de progressie van Smart Technologie, Tijdens het seminar zal het eind resultaat gepresenteerd worden.</p>
 	</div>
 		<div class="container3">
 		<div class="btn-group">
-		<a href="ST week 1.html" button class="button">Week 1</button></a>
-		<a href="ST week 2.html" button class="button">Week 2</button></a>
-		<a href="ST week 3.html" button class="button">Week 3</button></a>
+		<a href="ST week 1.html" button class="button">Internet of Things</button></a>
+		<a href="ST week 2.html" button class="button">Printed Circuit Board</button></a>
+		<a href="ST week 3.html" button class="button">3D Printing</button></a>
 			</div>
-	<br>
-	<div class="btn-group">
-			<a href="ST week 4.html" button class="button">Week 4</button></a>
-			<a href="ST week 5.html" button class="button">Week 5</button></a>
-			<a href="ST week 6.html" button class="button">Week 6</button></a>
-	</div>
 </div>
 
 <footer id="main-footer">
