--- a/ST week 3.html
+++ b/ST week 3.html
@@ -27,7 +27,7 @@
 
 	<div class="container">
 		<section id="main">
-				<a href="Smart Technologie.html">Smart Technologie</a> > Week 3
+				<a href="Smart Technologie.html">Smart Technologie</a> > 3D Printing
 			<h1>Smart Technologie </h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -37,7 +37,7 @@
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</section>
 		<aside id="sidebar">
-			<p>Smart Technologie Week 3 </p>
+			<p>3D Printing </p>
 		</aside>
 	</div>
 
