--- a/ST week 1.html
+++ b/ST week 1.html
@@ -27,17 +27,15 @@
 
 	<div class="container">
 		<section id="main">
-				<a href="Smart Technologie.html">Smart Technologie</a> > Week 1
+				<a href="Smart Technologie.html">Smart Technologie</a> > Internet of Things
 			<h1>Smart Technologie </h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>
+				<img src= https://i.imgur.com/XZaQrC6.png alt="Code" width="60%">
+				<img src= https://i.imgur.com/TRaVuHY.jpg alt="Onderdelen" width="60%">
+			</p>
 		</section>
 		<aside id="sidebar">
-			<p>Smart Technologie Week 1 </p>
+			<p>Internet of Things </p>
 		</aside>
 	</div>
 
