--- a/ST week 2.html
+++ b/ST week 2.html
@@ -27,17 +27,15 @@
 
 	<div class="container">
 		<section id="main">
-				<a href="Smart Technologie.html">Smart Technologie</a> > Week 2
+				<a href="Smart Technologie.html">Smart Technologie</a> > Printed Circuit Board
 			<h1>Smart Technologie </h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>
+				<img src= https://i.imgur.com/qpj6bPF.jpg alt="printplaat" width="60%">
+				<img src= https://i.imgur.com/ebMHNGy.png alt="printplaat" width="60%">
+			</p>
 		</section>
 		<aside id="sidebar">
-			<p>Smart Technologie Week 2 </p>
+			<p>Printed Circuit Board </p>
 		</aside>
 	</div>
 
