--- a/SS week 6.html
+++ b/SS week 6.html
@@ -27,7 +27,7 @@
 
 	<div class="container">
 		<section id="main">
-				<a href="Smart Start.html">Smart Start</a> > Week 6
+				<a href="Smart Start.html">Smart Start</a> > Ervaring
 				<h1>Smart Start</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -37,7 +37,7 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</section>
 			<aside id="sidebar">
-				<p>Smart Start Week 6 </p>
+				<p>Smart Start Ervaring </p>
 		</aside>
 	</div>
 
