--- a/ST week 2.html
+++ b/ST week 2.html
@@ -29,10 +29,12 @@
 		<section id="main">
 				<a href="Smart Technologie.html">Smart Technologie</a> > Printed Circuit Board
 			<h1>Smart Technologie </h1>
-			<p>
+			<p><b>Printed Circuit Board</b></p>
+			<p>Wanneer alles werkte op de IOT schakeling was de volgende stap om een PCB, Printed circuit board, te maken. Dit ging met het programma Elecrow. Met Elecrow maak je dus een blauwdruk voor een PCB die vervolgens in China zijn geprint. Hieronder zie je het PCB dat ik heb ontworpen afwijkt van de geprinte PCB. Dit komt omdat er tijdens het overgeven van de bestanden mijn eigen ontwerp verloren is gegaan. Roen Pulles was zo aardig om één van zijn extra PCB’s aan mij te geven waardoor ik alsnog verder kon met het 3D printen.
+				</p>
 				<img src= https://i.imgur.com/qpj6bPF.jpg alt="printplaat" width="60%">
 				<img src= https://i.imgur.com/ebMHNGy.png alt="printplaat" width="60%">
-			</p>
+			
 		</section>
 		<aside id="sidebar">
 			<p>Printed Circuit Board </p>
