--- a/Smart Start.html
+++ b/Smart Start.html
@@ -32,16 +32,16 @@
 		<p>Via de knoppen die hieronder kun je per week zien wat ik heb gedaan voor Smart Start </p>
 	</div>
 		<div class="container3">
-		<div class="btn-group">
+		<div class="btn-group2">
 		<a href="SS week 1.html" button class="button">Week 1</button></a>
 		<a href="SS week 2.html" button class="button">Week 2</button></a>
 		<a href="SS week 3.html" button class="button">Week 3</button></a>
 			</div>
 	<br>
-	<div class="btn-group">
+	<div class="btn-group2">
 			<a href="SS week 4.html" button class="button">Week 4</button></a>
 			<a href="SS week 5.html" button class="button">Week 5</button></a>
-			<a href="SS week 6.html" button class="button">Week 6</button></a>
+			<a href="SS week 6.html" button class="button">Ervaring</button></a>
 	</div>
 </div>
 
