--- a/Smart Technologie.html
+++ b/Smart Technologie.html
@@ -32,7 +32,7 @@
 		<p>Hieronder zie je per onderdeel de progressie van Smart Technologie, Tijdens het seminar zal het eind resultaat gepresenteerd worden.</p>
 	</div>
 		<div class="container3">
-		<div class="btn-group">
+		<div class="btn-group2">
 		<a href="ST week 1.html" button class="button">Internet of Things</button></a>
 		<a href="ST week 2.html" button class="button">Printed Circuit Board</button></a>
 		<a href="ST week 3.html" button class="button">3D Printing</button></a>
