--- a/Smart Business.html
+++ b/Smart Business.html
@@ -32,13 +32,13 @@
 		<p>Via de knoppen die hieronder kun je per week zien wat ik heb gedaan voor Smart Business </p>
 	</div>
 		<div class="container3">
-		<div class="btn-group">
+		<div class="btn-group2">
 		<a href="SB week 1.html" button class="button">Week 1</button></a>
 		<a href="SB week 2.html" button class="button">Week 2</button></a>
 		<a href="SB week 4.html" button class="button">Week 4</button></a>
 			</div>
 	<br>
-	<div class="btn-group">
+	<div class="btn-group2">
 			<a href="SB week 5.html" button class="button">Week 6</button></a>
 			<a href="SB week 6.html" button class="button">Ervaring</button></a>
 	</div>
