--- a/Smart Project.Html
+++ b/Smart Project.Html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-156084352-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-156084352-1');
+</script>
 	<title>Portfolio Thijs van Leerdam</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
