--- a/Smart Project.Html
+++ b/Smart Project.Html
@@ -40,7 +40,7 @@
 		<section id="main">
 			<h1>Smart Project</h1>
 			<p>
-				<p><b></b>Project Bluehub</p>
+				<p><b>Project Bluehub</b></p>
 				<p>Het Project Blueberry innovators is een samenwerkingsverband tussen 12 blauwe bessen telers in Nederland, Duitsland en België. De opdrachtgever naar school is Bluehub.</p> 
 				<p><b>Wat vooraf ging</b></p>
 				<p>Eerst zal ik beginnen met wat voor kennis, voor ons hebben al een projectgroep van de minor smart industry gewerkt aan een applicatie die het mogelijk maakt om onkruid te herkennen. Ze hebben hierbij gebruik gemaakt van Tensorflow. Tensorflow is een Machine learing tool van google die veel voor vergelijkbare doeleinde gebruikt wordt. De vorige projectgroep hebben met de tool 5 algemene onkruiden aangeleerd. De vijf soorten die ze hebben gedaan zijn Haagwinde, Distel, Brandnetel, Kweekgras en paardenbloem. Deze vijf onkruiden zijn vrij algemeen en daarom is de scope van ons project ook het verbreden en verdiepen van de applicatie geworden.</p>
