--- a/Innoveren.html
+++ b/Innoveren.html
@@ -38,12 +38,12 @@
 		<section id="main">
 				<a href="competenties.html">Competenties</a> > Innoveren en Ontwerpen
 				<h1>Innoveren en Ontwerpen</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>
+					<p><b>De student is in staat vernieuwende ideeën te ontwikkelen en deze te vertalen naar concepten voor processen, producten of diensten.</b></p>
+					<p>Tijdens de lessen van Smart Technologie ben ik bezig geweest met het maken van een IOT oplossing voor het wateren van een plant. Om dit voor elkaar te krijgen heb ik een prototype gemaakt op breadboards en aan de hand van dit prototype heb ik een PCB gemaakt die is geprint in China. Daarnaast om alle componenten te beschermen tegen de elementen heb ik een omhulling gemodelleerd en uiteindelijk ook geprint. Tijdens het seminar zal het volledige eindproduct gepresenteerd worden.</p>
+					<p>Tijdens het project heb ik aan deze competentie gewerkt door het werkend krijgen van een machine learning tool zoals beschreven in het <a href="Smart Project.Html">project</a>. Helaas is het niet helemaal gelukt omdat het op het laatste moment toch nog ergens fout liep en we er zelfs met hulp van ICT studenten niet zijn uit gekomen. Maar in het gehele proces heb ik wel veel geleerd over het opzetten van Dockers en de codeer taal python. ook hebben we een map gemaakt met daarin alles wat de volgende projectgroep nodig heeft om zo voor een duurzame overdracht te zorgen</p>
+					<p>Daarnaast is het portfolio in de vorm van deze website een goed bewijs. Een website maken is voor mij een vernieuwend iets, ik had hier maar weinig ervaring in en ik heb doormiddel van maar proberen een website neergezet waar ik tevreden mee ben.</p>
+					</p>
 			</section>
 			<aside id="sidebar">
 				<p>Innoveren en Ontwerpen</p>
