--- a/Onderzoeken.html
+++ b/Onderzoeken.html
@@ -38,12 +38,11 @@
 		<section id="main">
 				<a href="competenties.html">Competenties</a> > Onderzoeken
 				<h1>Onderzoeken</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>
+					<p><b>De student is in staat in een multidisciplinaire omgeving methoden en technieken op het gebied van onderzoek te selecteren en toe te passen op een Smart Industry vraagstuk.</b></p>
+					<p>Tijdens het project hebben we desk en fieldresearch gedaan en dat is terug te vinden onder het kopje <a href="Smart Project.Html">project</a>.</p>
+					<p>Daarnaast heb ik natuurlijk voor de voorbereidingen en weekopdracht veel onderzoek gedaan om tot de juiste informatie en antwoorden te komen. Hierbij verwijs ik U naar <a href= "SS week 4.Html"> Smart Start week 4, voorbereiding en weekopdracht</a>. In deze opdracht heb ik alle aangeleerde methode van deskresearch gebruikt en heb ik naar mijn mening een erg interessant stuk geschreven over Agile en Lean bij de Lamborghini fabriek.</p>
+					</p>
 			</section>
 			<aside id="sidebar">
 				<p>Onderzoeken</p>
