--- a/Projectmanagement.html
+++ b/Projectmanagement.html
@@ -38,12 +38,18 @@
 		<section id="main">
 				<a href="competenties.html">Competenties</a> > Projectmanagement
 				<h1>Projectmanagement</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p><b>De student is in staat in een multidisciplinaire omgeving methoden en technieken op het gebied van projectmanagement te selecteren en toe te passen op een Smart Industry vraagstuk.</b></p>
+				<p>De projectgroep waarin in heb gewerkt bestaat uit 3 leden.</p>
+					<p>Roen Pulles, Automotive</p>
+					<p>Breyten Kouwenberg, Finance & Control</p>
+					<p>Thijs van Leerdam, Food & Business</p>
+				<p>	Zoals je ziet zijn we van 3 verschillende economisch disciplines. Dus veel kennis deelde we al met elkaar. Maar ikzelf heb me meer verdiept in HTML en CSS waarbij ik de rest van mijn projectgroep heb geholpen met deze twee disciplines. Daarnaast heeft Roen Breyten en ik weer geholpen met het ontwerpen van het bakje voor de IOT-oplossing omdat hij daar weer meer kennis van had.</p>
+					<p>Daarnaast heb ik bij de kookworkshop mijn kennis over koken die ik in mijn vrijetijd maar ook tijdens mijn bachelor heb opgebouwd proberen te delen met mijn projectgenoten. Roen en Breyten hadden allebei geen idee wat we moesten doen met de blinde doos ingrediënten die we gekregen hadden. Ik heb toen het voortouw genomen en een gang bedacht met de aanwezige producten. Hierin heb ik ze begeleid in de taken die ze moesten doen en dit heeft tot een uitstekend resultaat geleid.
+					De gang die we hebben gemaakt was:</p>
+					<p>Verse ravioli met een vulling van champignon en eekhoorntjesbrood met daarbij Gegrilde eendenborst met een rodewijn saus</p>
+					<img src= https://i.imgur.com/AgpAL1s.jpg alt="kookworkshop" width="60%">
+					<img src= https://i.imgur.com/RouuzVE.jpg alt="kookworkshop" width="60%">
+					</p>
 			</section>
 			<aside id="sidebar">
 				<p>Projectmanagement</p>
